{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 579,
  "lineage": "238339b4-0cb4-a1b8-8f7a-6a36feab7cf2",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01123b84e2a4fba05",
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:instance/i-0fa5415f8b05e1ef9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jykim-ec2-instance-my-profile",
            "id": "i-0fa5415f8b05e1ef9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "juyunkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01c006e31a112a9a3",
            "private_dns": "ip-10-0-1-63.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.63",
            "public_ip": "13.125.70.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-047634d650e368a33",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04939d1729dc0c052",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aedeeb7bae76b258"
            ]
          },
          "dependencies": [
            "module.bastion.aws_iam_instance_profile.jykim_ec2_instance_my_profile",
            "module.bastion.aws_iam_role.jykim_iam_role_ec2_instance_bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:security-group/sg-0aedeeb7bae76b258",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aedeeb7bae76b258",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "252340876984",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0eaccb5544a090d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:security-group/sg-04508aa9af1eabdee",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-04508aa9af1eabdee",
            "ingress": [],
            "name": "jykim-cluster-cluster-20240324081731558300000006",
            "name_prefix": "jykim-cluster-cluster-",
            "owner_id": "252340876984",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jykim-cluster-cluster"
            },
            "tags_all": {
              "Name": "jykim-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0eaccb5544a090d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:security-group/sg-0ce80247b0748d521",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0ce80247b0748d521",
            "ingress": [],
            "name": "jykim-cluster-node-2024032408173183470000000a",
            "name_prefix": "jykim-cluster-node-",
            "owner_id": "252340876984",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jykim-cluster-node",
              "karpenter.sh/discovery": "jykim-cluster",
              "kubernetes.io/cluster/jykim-cluster": "owned"
            },
            "tags_all": {
              "Name": "jykim-cluster-node",
              "karpenter.sh/discovery": "jykim-cluster",
              "kubernetes.io/cluster/jykim-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0eaccb5544a090d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-188046465",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04508aa9af1eabdee",
            "security_group_rule_id": "sgr-02b99bd2842f1a59a",
            "self": false,
            "source_security_group_id": "sg-0ce80247b0748d521",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.my_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-980550852",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04508aa9af1eabdee",
            "security_group_rule_id": "sgr-0f6d202bde3805dfa",
            "self": false,
            "source_security_group_id": "sg-0ce80247b0748d521",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.my_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1185288763",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04508aa9af1eabdee",
            "security_group_rule_id": "sgr-0d0d149bc386cdadc",
            "self": false,
            "source_security_group_id": "sg-0ce80247b0748d521",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.my_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-691725379",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce80247b0748d521",
            "security_group_rule_id": "sgr-0caf3025a2756e22c",
            "self": false,
            "source_security_group_id": "sg-04508aa9af1eabdee",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.my_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-1659933318",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce80247b0748d521",
            "security_group_rule_id": "sgr-0e3467deabf72d772",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.my_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-1121013864",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce80247b0748d521",
            "security_group_rule_id": "sgr-0e41fac47431f89fc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.my_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-1011840363",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ce80247b0748d521",
            "security_group_rule_id": "sgr-056e9f774016031ba",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.my_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1786424327",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce80247b0748d521",
            "security_group_rule_id": "sgr-030c7d3be7c194d06",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.my_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-467849631",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ce80247b0748d521",
            "security_group_rule_id": "sgr-00b3440fd2604e4d9",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.my_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-175282602",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce80247b0748d521",
            "security_group_rule_id": "sgr-0136dcf9a6035ec4e",
            "self": false,
            "source_security_group_id": "sg-04508aa9af1eabdee",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.my_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-530822883",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce80247b0748d521",
            "security_group_rule_id": "sgr-0e34d4eed97f1f4ec",
            "self": false,
            "source_security_group_id": "sg-04508aa9af1eabdee",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.my_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_karpenter_port",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to Node group for Karpenter webhook",
            "from_port": 8443,
            "id": "sgrule-804171448",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce80247b0748d521",
            "security_group_rule_id": "sgr-00ed008c1d1c93d56",
            "self": false,
            "source_security_group_id": "sg-04508aa9af1eabdee",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.my_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1109162976",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce80247b0748d521",
            "security_group_rule_id": "sgr-0b99f6d6508bff468",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.my_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-431761359",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ce80247b0748d521",
            "security_group_rule_id": "sgr-0bba5a2012cccb1c0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.my_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db2fc547d17b5c6e",
            "domain": "vpc",
            "id": "eipalloc-0db2fc547d17b5c6e",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-52-78-200-117.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.200.117",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:internet-gateway/igw-08733fa6662414b79",
            "id": "igw-08733fa6662414b79",
            "owner_id": "252340876984",
            "tags": {
              "Name": "jykim-igw"
            },
            "tags_all": {
              "Name": "jykim-igw"
            },
            "vpc_id": "vpc-0b0eaccb5544a090d"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db2fc547d17b5c6e",
            "association_id": "eipassoc-044593610a962556c",
            "connectivity_type": "public",
            "id": "nat-0df66e1cc24dd3923",
            "network_interface_id": "eni-0dc623f9d2505b186",
            "private_ip": "10.0.1.234",
            "public_ip": "52.78.200.117",
            "subnet_id": "subnet-04939d1729dc0c052",
            "tags": {
              "Name": "jykim-nat-gateway"
            },
            "tags_all": {
              "Name": "jykim-nat-gateway"
            }
          },
          "dependencies": [
            "module.my_vpc.aws_eip.nat",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:route-table/rtb-0f8391e82a6e8f544",
            "id": "rtb-0f8391e82a6e8f544",
            "owner_id": "252340876984",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0df66e1cc24dd3923",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jykim-private-rtb"
            },
            "tags_all": {
              "Name": "jykim-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0eaccb5544a090d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_eip.nat",
            "module.my_vpc.aws_nat_gateway.nat",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:route-table/rtb-098d55ebfa38e5e98",
            "id": "rtb-098d55ebfa38e5e98",
            "owner_id": "252340876984",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08733fa6662414b79",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jykim-public-rtb"
            },
            "tags_all": {
              "Name": "jykim-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0eaccb5544a090d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.igw",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea808ac7b2a5c841",
            "route_table_id": "rtb-0f8391e82a6e8f544",
            "subnet_id": "subnet-05fd4338c12682ae3"
          },
          "dependencies": [
            "module.my_vpc.aws_eip.nat",
            "module.my_vpc.aws_nat_gateway.nat",
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.private_db",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d240480cab4f6b1",
            "route_table_id": "rtb-0f8391e82a6e8f544",
            "subnet_id": "subnet-053eb86c61f231632"
          },
          "dependencies": [
            "module.my_vpc.aws_eip.nat",
            "module.my_vpc.aws_nat_gateway.nat",
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.private_db",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_web_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d34d05b2190d6fd0",
            "route_table_id": "rtb-0f8391e82a6e8f544",
            "subnet_id": "subnet-0aac120c4a7291ee4"
          },
          "dependencies": [
            "module.my_vpc.aws_eip.nat",
            "module.my_vpc.aws_nat_gateway.nat",
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.private_web",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0319dc4a8c685d301",
            "route_table_id": "rtb-0f8391e82a6e8f544",
            "subnet_id": "subnet-0a78072c9e634a842"
          },
          "dependencies": [
            "module.my_vpc.aws_eip.nat",
            "module.my_vpc.aws_nat_gateway.nat",
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.private_web",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a65461d069a4a8c",
            "route_table_id": "rtb-098d55ebfa38e5e98",
            "subnet_id": "subnet-04939d1729dc0c052"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.igw",
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efc6e55b68f4c373",
            "route_table_id": "rtb-098d55ebfa38e5e98",
            "subnet_id": "subnet-09ac27e15987a3f6f"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.igw",
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:subnet/subnet-05fd4338c12682ae3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fd4338c12682ae3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252340876984",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jykim-private-subnet-db-a"
            },
            "tags_all": {
              "Name": "jykim-private-subnet-db-a"
            },
            "vpc_id": "vpc-0b0eaccb5544a090d"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:subnet/subnet-053eb86c61f231632",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053eb86c61f231632",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252340876984",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jykim-private-subnet-db-c"
            },
            "tags_all": {
              "Name": "jykim-private-subnet-db-c"
            },
            "vpc_id": "vpc-0b0eaccb5544a090d"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:subnet/subnet-0aac120c4a7291ee4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aac120c4a7291ee4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252340876984",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jykim-private-subnet-web-a",
              "karpenter.sh/discovery/jykim-cluster": "jykim-cluster",
              "kubernetes.io/cluster/jykim-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "jykim-private-subnet-web-a",
              "karpenter.sh/discovery/jykim-cluster": "jykim-cluster",
              "kubernetes.io/cluster/jykim-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b0eaccb5544a090d"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:subnet/subnet-0a78072c9e634a842",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a78072c9e634a842",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252340876984",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jykim-private-subnet-web-c",
              "karpenter.sh/discovery/jykim-cluster": "jykim-cluster",
              "kubernetes.io/cluster/jykim-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "jykim-private-subnet-web-c",
              "karpenter.sh/discovery/jykim-cluster": "jykim-cluster",
              "kubernetes.io/cluster/jykim-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b0eaccb5544a090d"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:subnet/subnet-04939d1729dc0c052",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04939d1729dc0c052",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "252340876984",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jykim-public-subnet-a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "jykim-public-subnet-a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b0eaccb5544a090d"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:subnet/subnet-09ac27e15987a3f6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ac27e15987a3f6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "252340876984",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jykim-public-subnet-c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "jykim-public-subnet-c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b0eaccb5544a090d"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:vpc/vpc-0b0eaccb5544a090d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-053a49352a05c2a07",
            "default_route_table_id": "rtb-0556ab26744971c9e",
            "default_security_group_id": "sg-0acba57ea4b4fdc58",
            "dhcp_options_id": "dopt-03b4be9464adc218b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b0eaccb5544a090d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0556ab26744971c9e",
            "owner_id": "252340876984",
            "tags": {
              "Name": "jykim-vpc"
            },
            "tags_all": {
              "Name": "jykim-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}